# 9DoF_Razor

./: 9dof_razor.overlay  CMakeLists.txt  README.md  prj.conf
src/: 9dof_hal.c  9dof_hal.h  opv_main.c
zephyr/boards/arm/9dof_razor/: 9dof_razor.dts  9dof_razor.yaml  9dof_razor_defconfig  Kconfig.board  Kconfig.defconfig  board.cmake  pinmux.c
zephyr/drivers/sensor/: CMakeLists.txt  Kconfig
zephyr/drivers/sensor/ak8963/: CMakeLists.txt  Kconfig  ak8963.c  ak8963.h
zephyr/drivers/sensor/mpu9250/: CMakeLists.txt  Kconfig  mpu9250.c  mpu9250.h  mpu9250_trigger.c
zephyr/dts/bindings/sensor/: asahi-kasei,ak8963.yaml  invensense,mpu9250.yaml
